  automatically.
  * Add GtkDrawingArea command set_font_face.
  * Add GtkDrawingArea command rel_move_for supporting text placement
  with respect to center, upper left corner, etc., of the text.
  * Support coordinate transformation in GtkDrawingArea.
  * Command execution time improved by a factor of about 20.
  * Avoid silly precision on mouse coordinates emitted from GtkEventBox.

4.6.0 (2016-03-27)
------------------
  * Make sure fifos are set to mode 0600 before being used.
  * Add support for creating tooltips.
  * Add support for GtkEventBox which reports keyboard and pointer
    device activity.
  * Add support for widgets grabbing focus.

4.5.0 (2016-03-25)
------------------
  * Add GtkStatusbar commands that take a context id argument.
  * Add support for changing widget size.
  * Add support for GtkScrolledWindow.

4.4.0 (2015-12-12)
------------------
  * Fix a subtle GTK-related bug where freshly created fifos vanished.
  * Fix a bug involving GTK+ 3.14 and GtkTreeView.
  * Add a --display option.

4.3.0 (2015-11-30)
------------------
  * Support GtkTreeStore.
  * Support editing in GtkTreeView.
  * Data behind GtkTextView and GtkTreeView can be saved into files
  where they are stored as a sequence of ordinary pipeglade commands.
  * Arbitrary commands can be read from files.
  * Setting fields of a non-existing GtkTreeStore/GtkListStore row
  automatically creates any nodes necessary in the supporting tree
  structure.

4.2.0 (2015-11-08)
------------------
  * Support GtkWindow moving and resizing.
  * Eliminate any use of sleep(), avoiding spinning.

4.1.0 (2015-10-02)
------------------
  * Add support for the XEmbed protocol, both as a GtkPlug and a
  GtkSocket.
  * Add support for GtkPrintUnixDialog.
  * Improve build process.

4.0.0 (2015-09-23)
------------------
  * Change API: Remove deprecated commands override_color,
  override_background_color, and override_font.
  * Disable runtime GLIB deprecation warnings.

3.1.1 (2015-09-22)