@@ -19,6 +19,8 @@
   * Support coordinate transformation in GtkDrawingArea.
   * Command execution time improved by a factor of about 20.
   * Avoid silly precision on mouse coordinates emitted from GtkEventBox.
+  * Floating point format in commands and messages is now independent
+  of the current locale.
 
 4.6.0 (2016-03-27)
 ------------------
